tests/istio_testcases/example_policies/multi-layer-tests/istio-gateways.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
  namespace: istio-system
spec:
  selector:
      istio: egressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - httpbin.example.com
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - httpbin.example.com
  gateways:
  - istio-system/my-gateway
  tls:
  - match:
    - gateways:
        - mesh
      port: 80
      sniHosts:
        - httpbin.example.com
    route:
    - destination:
        port:
          number: 443
        host: istio-egressgateway.istio-system.svc.cluster.local
  - match:
    - gateways:
        - istio-system/my-gateway
      port: 443
      sniHosts:
        - httpbin.example.com
    route:
    - destination:
        port:
          number: 80
        host: httpbin.example.com
---

apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: httpbin
spec:
  hosts:
  - httpbin.example.com
  - connected_with_mesh.example.com
  ports:
  - number: 80
    name: tls
    protocol: TLS
  resolution: DNS
